--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,22 @@ input{
 
 label{
   background-color: green;
-  width: 150px;
+  width: 180px;
   color: white;
   display: inline-block;
   padding: 4px;
+  height:25px;
+  border-radius: 5px;
 }
 
 button{
+  width: 180px;
   padding: 1rem;
+  border-radius: 6px;
+  margin: 2rem;
+}
+.sortedArray{
+  font-size: 32px;
+  border-top: double 4px green;
+  border-bottom: double 4px green;
 }
